--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -3,7 +3,9 @@ name: checkin
 on:
   schedule:
     # NOTE: Time is in UTC
-    - cron: "0 2 * * *"
+    - cron: "30 22 * * *"
+  watch:
+    type: started
 
 jobs:
   build:
@@ -20,6 +22,3 @@ jobs:
         env:
           USERNAME: ${{ secrets.USERNAME }}
           PASSWORD: ${{ secrets.PASSWORD }}
-          PROVINCE: ${{ secrets.PROVINCE }}
-          CITY: ${{ secrets.CITY }}
-          IS_INSCHOOL: ${{ secrets.IS_INSCHOOL }}
